<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hr.foi.air1719.personaltracker.LogIn"
    tools:showIn="@layout/activity_log_in">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="60dp"
            android:textSize="18dp"
            android:text="Username" />

        <EditText
            android:id="@+id/txtLogInUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:ems="10"
            android:hint="Username"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtLogInUserName"
            android:layout_marginTop="14dp"
            android:textSize="18dp"
            android:text="Password" />

        <EditText
            android:id="@+id/txtLogInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            tools:text="" />

        <Button
            android:id="@+id/btnLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtLogInPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="48dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/text"
            android:onClick="onClick_LogIn"
            android:text="Log in" />
        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogIn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorButton"
            android:textColor="@color/text"
            android:textAlignment="center"
            android:width="30dp"
            android:onClick="onClick_Registration"
            android:text="Create account" />


    </RelativeLayout>
</android.support.constraint.ConstraintLayout>


