<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/layout_account_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <android.support.constraint.ConstraintLayout
            android:id="@+id/content_account_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/lblFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Full name"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="false"
                android:ems="5"
                android:inputType="textPersonName"
                android:singleLine="false"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblFullName" />


            <EditText
                android:id="@+id/inputUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="false"
                android:ems="5"
                android:inputType="textPersonName"
                android:singleLine="false"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblUserName" />

            <TextView
                android:id="@+id/lblUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="User name"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputFullName" />

            <EditText
                android:id="@+id/inputOldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="false"
                android:ems="5"
                android:hint="Current Password"
                android:inputType="textPassword"
                android:singleLine="false"
                android:layout_marginTop="5dp"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblChangePassword" />



            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="false"
                android:ems="5"
                android:hint="New Password"
                android:inputType="textPassword"
                android:singleLine="false"
                android:layout_marginTop="2dp"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputOldPassword" />





            <EditText
                android:id="@+id/inputRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="Repeat new password"
                android:inputType="textPassword"
                android:layout_marginTop="2dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPassword" />



            <Button
                android:id="@+id/actionSaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                android:background="@color/colorPrimary"
                android:textColor="@color/text"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="15dp"
                android:gravity="center"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputRepeatPassword"/>

            <TextView
                android:id="@+id/lblNes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""

                app:layout_constraintLeft_toLeftOf="@+id/actionSaveAccount"
                app:layout_constraintStart_toStartOf="@+id/actionSaveAccount"
                app:layout_constraintTop_toBottomOf="@+id/actionSaveAccount" />

            <TextView
                android:id="@+id/lblEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="E-mail"

                app:layout_constraintLeft_toLeftOf="@+id/lblUserName"
                app:layout_constraintStart_toStartOf="@+id/lblUserName"
                app:layout_constraintTop_toBottomOf="@+id/inputUserName" />

            <EditText
                android:id="@+id/inputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignWithParentIfMissing="false"
                android:ems="5"
                android:inputType="textPersonName"
                android:singleLine="false"

                app:layout_constraintLeft_toLeftOf="@+id/inputRepeatPassword"
                app:layout_constraintStart_toStartOf="@+id/inputRepeatPassword"
                app:layout_constraintTop_toBottomOf="@+id/lblEmail" />

            <TextView
                android:id="@+id/lblChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Change password"
                android:layout_marginTop="15dp"
                android:textSize="17dp"
                android:textStyle="bold|italic"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputEmail" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</RelativeLayout>


